<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_action"
        android:icon="@drawable/ic_pin"
        android:title="@string/my_events_row" />

    <item
        android:id="@+id/nav_vendors"
        android:icon="@drawable/ic_person"
        android:title="@string/vendors" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/favourites" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>
