...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPendingApprovals"
                        style="@style/AppSegmentToggleButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pending_approvals" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRejectedEvents"
                        style="@style/AppSegmentToggleButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/show_rejected_events" />
...
